<resources>
    <string name="app_name">CookPad</string>
    <string name="recipes">Recipes</string>
    <string name="add">Add</string>
    <string name="shopping_list">Shopping List</string>
    <string name="categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_recipe">Search for recipe...</string>
    <string name="search_for_a_category">Search for a category...</string>
    <string name="search_categories">Search categories...</string>
    <string name="save">Save</string>
    <string name="recipe_form">Recipe Form</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="search">Search</string>
    <string name="example_long_shopping_item_name">Example shopping item item item item item item item</string>
    <string name="example_item_shopping_amount">8 cups</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_name">Recipe name</string>
    <string name="available_ingredients">Available Ingredients</string>
    <string name="added_ingredients">Added Ingredients</string>
    <string name="cancel">Cancel</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="amount">Amount</string>
    <string name="image">Image</string>
    <string name="insert_image">Insert image</string>
    <string name="category_name">Category Name</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="measurement">Measurement</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="steps">Steps</string>
    <string name="add_step">Add step</string>
    <string name="ingredients">Ingredients</string>
    <string name="carousel_image">Carousel image</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_email_address_to_reset_your_account">Enter your email address to reset your account</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="insert_image_button">insert image button</string>
    <string name="search_button">search button</string>
    <string name="add_ingredents_to_shopping_list">Add ingredents (from recipe) to the shopping list</string>
    <string name="no_categories_found">No categories found.</string>
    <string name="failed_to_load_categories">Failed to load categories. Please try again.</string>
    <string name="no_recipes_found">No recipes found.</string>
    <string name="no_shopping_list_items_found">No shopping list items found.</string>
</resources>