<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesFragment"
    android:gravity="center_horizontal">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/recipeFormTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/recipe_form"
        app:titleTextColor="@color/white"
        android:background="@color/orange"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:text="@string/insert_image"
        app:icon="@drawable/ic_image"
        app:iconGravity="textStart"
        app:iconTint="#52452A"
        android:textColor="#52452A"
        android:backgroundTint="#F2DDB8"
        android:textAllCaps="false"
        android:checkable="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:cornerRadius="4dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/BrownishFilledTextField"
        android:id="@+id/nameTextField"
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/BrownishFilledTextField"
        android:id="@+id/categoryTextField"
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:hint="@string/category"
        android:layout_marginBottom="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BrownishFilledTextField"
            android:id="@+id/ingredientTextField"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="60"
            android:hint="@string/ingredient"
            android:layout_marginEnd="4dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BrownishFilledTextField"
            android:id="@+id/measurementTextField"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="40"
            android:hint="@string/measurement"
            android:layout_marginStart="4dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:text="@string/add_ingredient"
        app:icon="@drawable/ic_circle_add"
        app:iconGravity="textStart"
        app:iconTint="#52452A"
        android:textColor="#52452A"
        android:backgroundTint="#F2DDB8"
        android:textAllCaps="false"
        android:checkable="true"
        android:layout_marginBottom="16dp"
        app:cornerRadius="4dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/BrownishFilledTextField"
        android:id="@+id/stepsTextField"
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:hint="@string/steps"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:text="@string/add_step"
        app:icon="@drawable/ic_circle_add"
        app:iconGravity="textStart"
        app:iconTint="#52452A"
        android:textColor="#52452A"
        android:backgroundTint="#F2DDB8"
        android:textAllCaps="false"
        android:checkable="true"
        android:layout_marginBottom="16dp"
        app:cornerRadius="4dp"
        />


    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveRecipeButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="50"
            android:text="@string/save"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple"
            android:textAllCaps="false"
            app:cornerRadius="4dp"
            android:layout_marginEnd="4dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelRecipeButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="50"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple"
            android:textAllCaps="false"
            app:cornerRadius="4dp"
            android:layout_marginStart="4dp"
            />

    </LinearLayout>



</LinearLayout>