<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners"
    android:clipToOutline="true"
    android:padding="@dimen/padding_medium">

    <!--dialog that asks user what ingredients in the recipe they want to add to the shopping list -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_ingredients"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_extra_small"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableIngredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/added_ingredients"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addedIngredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/saveAddedItemsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/brown"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <Button
            android:id="@+id/cancelAddedItemsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="8dp"
            android:textColor="@color/brown"
            style="@style/Widget.Material3.Button.TextButton"
            />

    </LinearLayout>

</LinearLayout>