<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/orange"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/signinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        >

        <TextView
            android:id="@+id/emailAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            />
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_height"
            style="@style/BrownishFilledTextField"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_height"
            style="@style/BrownishFilledTextField"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="right"
        android:textSize="14sp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:text="@string/forgot_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signupQuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="14sp"
            android:layout_marginEnd="2dp"
            />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:text="@string/sign_up"
            android:textColor="@color/purple"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            />
    </LinearLayout>

</LinearLayout>





