<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:clipToOutline="true"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_extra_small"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredientNameInputLayout"
        style="@style/BrownFilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginBottom="@dimen/margin_small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_extra_small"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredientAmountInputLayout"
        style="@style/BrownFilledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginBottom="@dimen/margin_small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/saveIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/dialog_button_text_color"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <Button
            android:id="@+id/cancelIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/dialog_button_text_color"
            style="@style/Widget.Material3.Button.TextButton"
            />

    </LinearLayout>

</LinearLayout>